--- a/module6/live_hosting_app/package.json
+++ b/module6/live_hosting_app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "routing-demo-app",
+  "name": "live_hosting_app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,15 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.6.0",
-    "bootstrap": "^5.3.3",
-    "bootstrap-icons": "^1.11.3",
-    "mdb-react-ui-kit": "^8.0.0",
     "react": "^18.3.1",
-    "react-bootstrap": "^2.10.4",
-    "react-dom": "^18.3.1",
-    "react-google-charts": "^4.0.1",
-    "react-router-dom": "^6.26.2"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
