--- a/module7/ecommerce-app/package.json
+++ b/module7/ecommerce-app/package.json
@@ -8,9 +8,10 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "json-server":"json-server --watch db.json --port 8000"
+    "json-server": "json-server --watch db.json --port 8000"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@fortawesome/fontawesome-free": "^6.6.0",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
