--- a/module7/ecommerce-app/package.json
+++ b/module7/ecommerce-app/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "file-saver": "^2.0.5",
     "json-server": "^1.0.0-beta.3",
     "mdb-react-ui-kit": "^8.0.0",
     "react": "^18.3.1",
@@ -23,7 +24,8 @@
     "react-dom": "^18.3.1",
     "react-google-charts": "^4.0.1",
     "react-router-dom": "^6.26.2",
-    "sweetalert2": "^11.14.5"
+    "sweetalert2": "^11.14.5",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
