--- a/module7/ecommerce-app/package.json
+++ b/module7/ecommerce-app/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@fortawesome/fontawesome-free": "^6.6.0",
+    "aos": "^3.0.0-beta.6",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
